--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -206,15 +206,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
       - name: Run npm audit
         run: npm audit --audit-level=moderate
 
       - name: Run Snyk security scan
-        uses: snyk/actions/node@master
+        run: |
+          cd ${{ env.WORKING_DIRECTORY }}
+          snyk test --severity-threshold=high
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args: --severity-threshold=high
 
   # Deploy to Dev (manual trigger only)
   deploy-dev:
